[gd_scene load_steps=6 format=3 uid="uid://d0fkjk7lmjgsm"]

[ext_resource type="Script" path="res://player.gd" id="1_5b41b"]
[ext_resource type="Texture2D" uid="uid://nx5thaogxqhl" path="res://assets/graphics/player/player.png" id="1_obgmk"]

[sub_resource type="SpriteFrames" id="SpriteFrames_x8ynp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_obgmk")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wsn0i"]
radius = 8.0
height = 20.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hlgvq"]
size = Vector2(15, 26)

[node name="player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 9
script = ExtResource("1_5b41b")
JUMP_VELOCITY = -300.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_x8ynp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_wsn0i")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(5, 5)
position_smoothing_enabled = true
position_smoothing_speed = 10.69

[node name="interactBox" type="Area2D" parent="."]
position = Vector2(15, 0)
collision_layer = 2
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="interactBox"]
shape = SubResource("RectangleShape2D_hlgvq")

[node name="Timers" type="Node" parent="."]

[node name="InteractTimer" type="Timer" parent="Timers"]
wait_time = 0.2

[connection signal="area_entered" from="interactBox" to="." method="_on_interact_box_area_entered"]
[connection signal="area_exited" from="interactBox" to="." method="_on_interact_box_area_exited"]
[connection signal="timeout" from="Timers/InteractTimer" to="." method="_on_interact_timer_timeout"]
